--- a/src/Cell.css
+++ b/src/Cell.css
@@ -3,8 +3,10 @@
   width: 100px;
   background-color: darkgray;
   cursor: pointer;
+  padding: none;
 }
 
 .Cell-lit {
-  background-color: white;
+  background-color: teal;
+  padding: none;
 }
